--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chart.js": "^4.4.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
+    "peggy": "^4.0.3",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
     "vite": "^5.0.7",
