Add date-fns as required dependency for robust date handling
- Replace native Date with date-fns for professional-grade parsing
- Support both EU (DD/MM/YYYY) and US (MM/DD/YYYY) date formats
- Minimal bundle impact (~5KB) as most target apps already use date-fns
- Remove fallback complexity - just require industry standard library
- Update technical decisions, architecture, and package.json

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "vitest": "^1.0.0"
   },
   "dependencies": {
-    "papaparse": "^5.4.1"
+    "papaparse": "^5.4.1",
+    "date-fns": "^3.6.0"
   },
   "repository": {
     "type": "git",
